# tauri-inliner-rs

./: CHANGELOG.md  Cargo.toml  DEPENDENTS.md  LICENSE  README.md
Source/: binary.rs  content-type.json  js_css.rs  lib.rs
src/: binary.rs  js_css.rs
