[dependencies]
base64 = "0.22"
derive_more = "2.0"
html5ever = "0.29"
kuchiki = "0.8"
log = "0.4"
once_cell = "1.20"
regex = "1.11"
reqwest = { version = "0.12", features = [ "blocking" ] }
serde_json = "1.0"
thiserror = "2.0"
url = "2.5"

[dev-dependencies]
dissimilar = "1.0"
env_logger = "0.11"
percent-encoding = "2.3"
termcolor = "1.4"
tiny_http = "0.12"

[lib]
path = "Source/lib.rs"

[package]
authors = [ "Lucas Nogueira <lucas@tauri.studio>" ]
categories = [ "web-programming" ]
description = "A library to inline HTML assets."
edition = "2018"
exclude = [ "src/fixtures" ]
homepage = "https://github.com/tauri-apps/tauri-inliner-rs"
keywords = [ "tauri", "web", "inline", "html", "assets" ]
license-file = "LICENSE"
name = "tauri-inliner"
readme = "README.md"
repository = "https://github.com/tauri-apps/tauri-inliner-rs"
version = "0.0.1"
